updated at: 2023-04-25 22:26, 【3Dモデル】物理学の聖剣 - 仮想VoidCat - BOOTH

--- a/VRChat/78/1275278.html
+++ b/VRChat/78/1275278.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1nvVhheINvshj9EX2GKIJXNUz3SzlCPuRj8pQZriYdo="></script>
+    "H2GK8bRRyo/06rYAy9KsCZesyrURPjnuQlN2UPQCkhM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】物理学の聖剣","description":"【3Dモデル】物理学の聖剣\n\n●概要\n【3Dモデル】物理学の聖剣です。\n\n●内容物:\n・Unitypackageファイル x 1\n・FBXファイル x 1\n・PNGファイル x 3\n\n・3Dデータ形式：FBX\n・テクスチャー形式：PNG\n・ポリゴン数：2002\n","url":"https://booth.pm/ja/items/1275278","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1275278/a830698b-94e0-4cfc-9e84-6c063ad5b40b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1nvVhheINvshj9EX2GKIJXNUz3SzlCPuRj8pQZriYdo="></script>
+    nonce="H2GK8bRRyo/06rYAy9KsCZesyrURPjnuQlN2UPQCkhM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1275278/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              125
+                              126
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1275278/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              125
+                              126
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
