--- a/VRChat/98/1275198.html
+++ b/VRChat/98/1275198.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "694F3O6jb7cKVnLkjneWm2Rajo2jhpkvHDwiE6j8CN4="></script>
+    "DhEvBrdbIrBYNCkYLWWE7sN8QW4wglGe8IQZ73icyVU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"DogBowl【UdonChips】","description":"餌皿がUdonChipsに対応！\n握ると所持金をチャージし、頭を当てると出金します。\nひっくり返すとチャージが全て消える機能付き。\nカジノワールドなどに置いておくと楽しいです。\n\n----------------------------------------------------\n過去に旧モデル版をご購入いただいていた方は無料でUdonChips版のアップデートをご利用いただけます。\n(おまけとして過去作のものもダウンロード可能です)","url":"https://booth.pm/ja/items/1275198","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/8eb7df68-18ab-47b3-995f-550289ccaf81/i/1275198/32a14208-a4ea-49a7-bb37-ce57a21b3833_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="694F3O6jb7cKVnLkjneWm2Rajo2jhpkvHDwiE6j8CN4="></script>
+    nonce="DhEvBrdbIrBYNCkYLWWE7sN8QW4wglGe8IQZ73icyVU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1275198/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               298
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1275198/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               298
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
