--- a/VRChat/88/1273588.html
+++ b/VRChat/88/1273588.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "T5Eq9h9UfAg7sKtWI9ebjoPxXXrCsbeczFFM/3Tig58="></script>
+    "lOclefakqzDAqt/j1wPJoxajjnn8yO6mWak/i5cKtEg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けUnity着替え補助スクリプト","description":"UnityWearChangeSupporter v0.0.1\n\nVRChat等を想定した着せ替えスクリプトです。\n\nVRChat用の服をBlenderを使わずにUnityだけで「試着」するスクリプトです。\n\nみんながバーチャルでオシャレを気軽に出来ると絶対面白いと思うので、試してみて欲しいです！\n\n\nMITライセンスなので、服やモデル、他のスクリプトやツールに同梱して配布しても大丈夫です。\n\n\n本スクリプトの設計思想は\nモリオン航空さんの「ケモノファブリック」から影響を受けています。おすすめします。\n\nhttps://morion.stores.jp/items/5ba3c0d95496ff275a000370","url":"https://booth.pm/ja/items/1273588","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/420a90f0-ccdc-4d44-a71f-6f54f0194b07/i/1273588/e4834502-e587-4e32-a37f-033fe2f90150_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="T5Eq9h9UfAg7sKtWI9ebjoPxXXrCsbeczFFM/3Tig58="></script>
+    nonce="lOclefakqzDAqt/j1wPJoxajjnn8yO6mWak/i5cKtEg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1273588/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1323
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1273588/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1323
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
