updated at: 2023-04-25 22:27, ボクセルビームライフルパック - VOXWAD - BOOTH

--- a/VRChat/61/1274361.html
+++ b/VRChat/61/1274361.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NKL9ASjKEvEl/N0gcqHkIKtTe7NRT50OcnPtsmc0j+U="></script>
+    "IN4yXDu+As8wz0vAVvL+NBgSzvoEJzMKCqP/Rr00TM8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクセルビームライフルパック","description":"[JP]\nMagicaVoxelで製作したビームライフルモデルです。\n3つのライフルが入っています。\nUnityで利用可能なEmission専用テクスチャーも入っています。\nファイル形式は .OBJ です。\n\n[EN]\nBeam Rifle Models made with MagicaVoxel.\nThere are 3 different Rifle Models.\nThere are also Emission Textures for using on Unity.\nFile Format is \".OBJ\".\n\n[KR]\nMagicaVoxel로 제작한 빔 라이플 모델입니다.\n총 3가지의 모델들이 들어 있습니다.\nUnity 상에서의 이용을 위한 이미션 텍스쳐도 동봉되어 있습니다.\n파일 형식은 .OBJ 입니다.","url":"https://booth.pm/ja/items/1274361","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/848234c6-c7ff-4b68-9cb5-1d1c77651f0a/i/1274361/be354e3b-c3c5-419c-813f-f1e934379c07_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NKL9ASjKEvEl/N0gcqHkIKtTe7NRT50OcnPtsmc0j+U="></script>
+    nonce="IN4yXDu+As8wz0vAVvL+NBgSzvoEJzMKCqP/Rr00TM8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1274361/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1274361/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
