updated at: 2023-04-25 22:27, DJK-400 - 消しゴムの筆箱 - BOOTH

--- a/VRChat/48/1274348.html
+++ b/VRChat/48/1274348.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hBzaRl7lmtKEWQ1aqN7oHKCMbomdUGckeW/spXR22OY="></script>
+    "wBG/IpFeYjX9q/IHH48By1niAKhgjaw55e6yrKFzyxg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"DJK-400","description":"Kesigomu's Arsenal社より発売されたオーソドックスなDJコントローラー。\n圧倒的なコスパと耐久性で瞬く間に普及し、DJ人口の増加も促した傑作。","url":"https://booth.pm/ja/items/1274348","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/3713aef5-42d6-43d4-b456-e2fe144cfcc8/i/1274348/28aee78b-66ac-4448-97ee-5d61d93e7ee7_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hBzaRl7lmtKEWQ1aqN7oHKCMbomdUGckeW/spXR22OY="></script>
+    nonce="wBG/IpFeYjX9q/IHH48By1niAKhgjaw55e6yrKFzyxg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1274348/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               140
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1274348/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               140
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
