--- a/VRChat/17/1272117.html
+++ b/VRChat/17/1272117.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DHirK5MKzj5vgCciYFGEuhIoxw6Uizv8BTDvBsq/pLg="></script>
+    "QoUFslZZWr57O7UPiuyHqMlqvt+TxoRx0vb+Xj4PG20="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"雄芝堂ｱﾆﾒｰｼｮﾝDXセット","description":"Unityアニメーションのセットです。キャラモデルデータは含まれません。\nVRChat想定。\n\nキャラサイズに合わせた微調整推奨です。ちょっとくらいズレてても気にしねぇ！というならそのままどうぞ。\n\nサンプル画像一枚目にユニティちゃん(© UTJ/UCL)を使用してます。モデルデータは含まれません。Humanoidのアバターであればユニティちゃんでなくとも動作します。\n\n\n三種類のセットを用意しました","url":"https://booth.pm/ja/items/1272117","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"700","highPrice":"1500"},"image":"https://booth.pximg.net/c/620x620/f9123ecc-aaaf-46a9-8900-6a84c4afd3c4/i/1272117/9b722f8a-3c44-495c-a528-d1fbec789f55_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DHirK5MKzj5vgCciYFGEuhIoxw6Uizv8BTDvBsq/pLg="></script>
+    nonce="QoUFslZZWr57O7UPiuyHqMlqvt+TxoRx0vb+Xj4PG20="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1272117/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               70
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1272117/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               70
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
