updated at: 2023-04-25 22:28, 桜パーティクル - やな板金有限公司 - BOOTH

--- a/VRChat/55/1272355.html
+++ b/VRChat/55/1272355.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "C1SnsAhUgkOHDeEBzty33RTToQvK4sSVD66GbUTEnNw="></script>
+    "eQEq/TRjmOZG6mNuIwf92EyVNmsXMejSyPdvRJiLLjw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"桜パーティクル","description":"Sakura particleはUnityでご利用いただける、Particle Systemの素材です。\nVRChatでの使用を想定しており、ワールドの雰囲気づくりやパーティクル芸の\nネタとして良い体験を支援するために作りました。\n試しに仕込んでみたところ、思いのほか好評だったので、公開しました。\n\n無料の方でも有料の方でも中身は変わりません。","url":"https://booth.pm/ja/items/1272355","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/69e088f2-5cc3-4f85-a30a-6d194aa96cfa/i/1272355/80138b81-4b22-439a-9ba1-56f2f8885700_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="C1SnsAhUgkOHDeEBzty33RTToQvK4sSVD66GbUTEnNw="></script>
+    nonce="eQEq/TRjmOZG6mNuIwf92EyVNmsXMejSyPdvRJiLLjw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1272355/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               278
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1272355/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               278
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
