updated at: 2023-04-25 22:29, 【Unity】Vertex Modulation Shader - 満天星躑躅だよ - BOOTH

--- a/VRChat/35/1273435.html
+++ b/VRChat/35/1273435.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wtB03N8W3KJk68DZf8aqyYaVO/n/Nvm8BmqlkKD+QZw="></script>
+    "c/6JXvSFiAc7GwKzgT6rvLKGommjHe3wd0BYMxA2RzM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Unity】Vertex Modulation Shader","description":"オブジェクトの頂点にノイズテクスチャを流して法線方向に縮ませたり膨らませたりしてフワフワさせるシェーダーです\nついでに周期的に色を点滅させたりします\n\nエフェクトやVRChatアバターのアクセサリーとしてどうぞ\n\nサンプルとして設定済みマテリアル3種、ノイズテクスチャ5種、メッシュ4種を同梱しています\n\n動作サンプルは下記ツイート\nhttps://twitter.com/tsutsuji815/status/1106170550546632704","url":"https://booth.pm/ja/items/1273435","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/aa7414fb-c4aa-4710-9c36-eb78e1f7edbb/i/1273435/ccbd06d7-b195-40cf-ae02-512ead72c463_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wtB03N8W3KJk68DZf8aqyYaVO/n/Nvm8BmqlkKD+QZw="></script>
+    nonce="c/6JXvSFiAc7GwKzgT6rvLKGommjHe3wd0BYMxA2RzM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1273435/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1030
+                              1031
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1273435/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1030
+                              1031
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
