updated at: 2023-04-25 22:29, 【VRChat】猫戦車&amp;猫ヘリコプター - 堀門堂-ShobonCompany - BOOTH

--- a/VRChat/52/1273352.html
+++ b/VRChat/52/1273352.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Wf749w2mkUWTHNjgFGh6v615Y0L+tUJzOO9fcn2tZiQ="></script>
+    "VEi5msO/gI85Ydq+K6/4T9N2d2mpBMCKexXhe2mObVE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】猫戦車\u0026猫ヘリコプター","description":"こちらは五式中戦車とOH-1ヘリコプターを元に制作した\n\nVRChat用のGenericアバターです。\n\n\nー導入方法ー\nNyankoTank.pngとTank.pngをUnityにインポートしたのち\n\n戦車、あるいはヘリコプターのfdxファイルを入れてください。\n\n※NyannkoTankと書いてありますがヘリコプターでも使います。\n\nヘリコプターの場合、同封されているUnityパッケージに\n\nアニメーションが入っていますので\n\nボーン名にあったアニメーションを適用させてください。\n\n\n\n【≫有料版と無料版との差はありません。\n　　これからの作品作製への励みになります。^^】\n\n\n\n【利用規約】\n\n改変、二次創作可\n※ただし二次創作の場合引用元を表記してください。\n\n商業及び営利目的による利用は不可。\n\n\n良いVRChatライフを！","url":"https://booth.pm/ja/items/1273352","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/85b78be0-98ff-4d72-b932-6387710ad1b6/i/1273352/f4bb791c-9591-4367-94aa-43eaa1d705ae_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Wf749w2mkUWTHNjgFGh6v615Y0L+tUJzOO9fcn2tZiQ="></script>
+    nonce="VEi5msO/gI85Ydq+K6/4T9N2d2mpBMCKexXhe2mObVE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1273352/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1273352/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
