updated at: 2023-04-25 22:29, [3Dモデル]インラインスケート - nyakomake - BOOTH

--- a/VRChat/99/1273299.html
+++ b/VRChat/99/1273299.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zSKdBzgEu+p0G1rCFgoVXt0UESNgzpRzeqy2dgsFWMQ="></script>
+    "ddCdyLpxsBoPvwsMZPhNvn9oBaFqrXwPtEVILlCHoPk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]インラインスケート","description":"インラインスケートの3Dモデルです。\n\n！Unityのみではアバターへの適用はできません！\n既存のアバター等のモデルに適用する場合、3Dモデリングソフトを用いてボーン調整、スキニング（ウェイトペイント）等の作業が必要となります。\n\nポリゴン数 10016\n\n※商品画像内のアバターは付属しません","url":"https://booth.pm/ja/items/1273299","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/3e9c0dda-28ad-4162-9dd2-7a79f3fe3e95/i/1273299/f90abe12-9007-467d-b1cf-5c9e292ec3fc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zSKdBzgEu+p0G1rCFgoVXt0UESNgzpRzeqy2dgsFWMQ="></script>
+    nonce="ddCdyLpxsBoPvwsMZPhNvn9oBaFqrXwPtEVILlCHoPk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1273299/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               175
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1273299/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               175
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
