--- a/VRChat/19/1272719.html
+++ b/VRChat/19/1272719.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sNuF6q0Z34CoHaUm1E0bDO3FTiqtbI8yEPa6plcOzX4="></script>
+    "At8EwghBHzPXJCiSkijK40uYmD8UohVuoxjQ5wpM5iM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ラジオチャットをボイスチャットに流し込むのを助けるツール","description":"VRChat等ボイスチャットしかない環境でラジオチャットみたいに定型文コミュニケーションできるようにしたいなあと考えて作成しました。\n音声なら何でも流せてしまうので、このツールで荒らし行為等行われないよう有料商品とさせていただきました。\n\n他、HaruqaのFF内の方は、「Haruqaポイント」が使用できます。\nhttps://docs.google.com/spreadsheets/d/12bNyV3DBfgwP6qSopWHrduxU2KFnX7LDvI91MHP7mzE/edit?usp=sharing","url":"https://booth.pm/ja/items/1272719","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/d5a2a7c6-8511-46b8-b926-701687fd1c07/i/1272719/904be52d-0fb9-43f7-b564-32cd87cb274b_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sNuF6q0Z34CoHaUm1E0bDO3FTiqtbI8yEPa6plcOzX4="></script>
+    nonce="At8EwghBHzPXJCiSkijK40uYmD8UohVuoxjQ5wpM5iM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1272719/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1272719/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
