--- a/VRChat/02/1272902.html
+++ b/VRChat/02/1272902.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "EG+1HgL8hJc2OKAa7HcaEqyidUqmWBTdtjLMLq5SxPo="></script>
+    "eLeofzl74IGIvXqvduNwZLNoLpYb9uUo8qJvjPMiuhY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ブルパップ式コイルガン [HN-W-001\"Magnetit\"]","description":"---説明---\n\nVRChatでの仕様を想定した、ブルパップ式のコイルガンです。\nストック、マガジンの着脱が可能です。\n\nUnitypackageの方はマテリアルなどの設定を済ませてあります。\n\n\n\n---利用規約---\n\n1,本モデルの再配布、販売を禁止します。\n\n2,本モデルを他者への誹謗中傷目的に用いることを禁止します。\n\n3,以上のことを遵守したあらゆる活動において、本モデルを自由に使用することを許可します。\n\n--------------\n\n\n\nその他、不明な点等ございましたら以下に連絡ください。\n\nTwitter:@kirihama_kanmen\n\n\n","url":"https://booth.pm/ja/items/1272902","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b1d40e68-0591-47f4-ac06-1d0df4c9cba5/i/1272902/aad230aa-44cf-41a6-81b2-349c3a508a87_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EG+1HgL8hJc2OKAa7HcaEqyidUqmWBTdtjLMLq5SxPo="></script>
+    nonce="eLeofzl74IGIvXqvduNwZLNoLpYb9uUo8qJvjPMiuhY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1272902/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1272902/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
