updated at: 2023-04-25 22:30, ３Dモデル　縁切り鋏【無料】 - みみみ製作所 - BOOTH

--- a/VRChat/70/1272570.html
+++ b/VRChat/70/1272570.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "y3KYrym+X3rhRTZPJRW2puP6tDPq8DwDmRt11ZBz5r0="></script>
+    "mV3g5sLFTthsUwjOFwW+2vqaPxJ+PlJ4tAg9W+7TV4s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル　縁切り鋏【無料】","description":"オリジナル３Dモデル【縁切り鋏】紹介文\n\n大型の鋏モチーフの刀「縁切り鋏」です、\n大型の刃が斬るものは人との絆である、\n\n…みたいなイメージの元作成されたモデルです\n使用するための利用規則はほとんどなく\n誰にでも使用していただけるモデルです\n\n同封している単色テクスチャはShadowMatcapcolorに入れることでチタンのような色に変更することができます\n\n【注釈】\nこの鋏はあくまで名称であり人との縁切りを促すものではありません","url":"https://booth.pm/ja/items/1272570","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2ba89119-a30f-412c-b54c-ef71ff74a421/i/1272570/5d38462a-4b7e-4158-9e23-54037f5c7680_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y3KYrym+X3rhRTZPJRW2puP6tDPq8DwDmRt11ZBz5r0="></script>
+    nonce="mV3g5sLFTthsUwjOFwW+2vqaPxJ+PlJ4tAg9W+7TV4s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1272570/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1272570/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
