--- a/VRChat/74/1272574.html
+++ b/VRChat/74/1272574.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "n4N+NtPCnv7LP07u9XXHw/ezX1bUWzaQrzNugJs5YfQ="></script>
+    "MOY27KewMGsB6fgjdBCz028sPIO+STDtr2675RmDle8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"まるまるキャンディ","description":"VRchatで使えるアンモナイトをイメージした形の飴です。\nホワイトデー向けに作ったものです。１人で食べるには少し大きい？\n\n模様がゆっくりと飴の形状に沿ってスクロールして、\nつやつやした見た目でわずかに反射します。\n\n宇宙と空もようのマテリアルをお好みで切り替えて使えます。\n好きなテクスチャに変えることも可能です。\n\n当商品はIsuzu shaderを同梱させていただいています。\n\n本体の著作権はonimaruに帰属します。\n再配布をしたり、アバターペデスタルでの使用はしないでください。\n\n稀に裏返って見えるワールドがあるようですが、マテリアル内のRenderingのCull ModeをFrontにすると直ると思います。","url":"https://booth.pm/ja/items/1272574","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/e48c3658-73e4-4592-ab67-ca9564616e8e/i/1272574/bdc7a7f7-5cfd-45a0-b9c8-a36c12f29e52_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="n4N+NtPCnv7LP07u9XXHw/ezX1bUWzaQrzNugJs5YfQ="></script>
+    nonce="MOY27KewMGsB6fgjdBCz028sPIO+STDtr2675RmDle8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1272574/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1272574/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
