updated at: 2023-04-25 22:30, マルンの手作りクッキー ※Old Data - マルンのお店 - BOOTH

--- a/VRChat/44/1272544.html
+++ b/VRChat/44/1272544.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gsUg1Wi/ycptg/q+eR5qbZNKvcZ3JQspv9YWsk7nP6k="></script>
+    "M4sf8dhXe0wWGU9n9iYwt1a9D+fnbDvThqf22ApnCJA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"マルンの手作りクッキー ※Old Data","description":"ホワイトデーなので初めてクッキーを焼きました。\n\n●内容物\n・Cooky(FBX)1個。\n・テクスチャー(PNG)1枚。\n・UV展開図(PNG)1枚。\n・Prefabs入りUnitypackage 1個。\n・Readme 1枚。\n\n●利用規約\n・再配布OK!!\n・改変自由。\n・商用利用の許可。\n\n●注意事項\n・当モデルはVRChatでの使用を想定しています。\n・当データを使用した事によるトラブルについて作者は一切責任を負いません。\n・ご不明な点や問題がございましたら作者までお気軽にご連絡下さい。\n\n作者連絡先→ https://twitter.com/Marun_Spirit","url":"https://booth.pm/ja/items/1272544","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8ff6fcbd-9bfc-47c9-869c-9f7e8280f01b/i/1272544/8fe0d8ab-becd-49d9-9f92-3249e58d1803_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gsUg1Wi/ycptg/q+eR5qbZNKvcZ3JQspv9YWsk7nP6k="></script>
+    nonce="M4sf8dhXe0wWGU9n9iYwt1a9D+fnbDvThqf22ApnCJA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1272544/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1272544/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
