--- a/VRChat/17/1272517.html
+++ b/VRChat/17/1272517.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/Sk623eWPs2kDZnkfh+FvMOd2aJ2Pbaa7uWYalco7qA="></script>
+    "HyBDm0PA5Nc0/sMqSqJRoGdH1DCUxd2jvyGJpFlc9Kg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"手の３ｄモデル","description":"△979\n\n内容\n手の3dモデル（fbx）、テクスチャ３種（png）、readme\nVRchat・MMDでの利用可\n商用利用可（再配布のみ禁止）\n\n成人男性の手のモデルデータです。\nテクスチャが３種類（肌色・青肌・グレースケール）付属しています。グレースケールにオーバーレイをかけることで、お使いのアバターの肌の色にあわせることが可能です。\n\n画像にもある通り、動きをつけることはあまり想定してしません。用途に合わせてお買い求めください。\n\nfbxは右手のものなので反転コピーして左手を錬成してください。","url":"https://booth.pm/ja/items/1272517","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/602fbacb-0d72-4af8-a5fd-519a90b362d7/i/1272517/293087b9-17f5-4dcb-ad9e-00a65d45a098_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/Sk623eWPs2kDZnkfh+FvMOd2aJ2Pbaa7uWYalco7qA="></script>
+    nonce="HyBDm0PA5Nc0/sMqSqJRoGdH1DCUxd2jvyGJpFlc9Kg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1272517/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1272517/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
